--- a/style.css
+++ b/style.css
@@ -12,3 +12,41 @@
 .white {
   background-color: white;
 }
+/* lesson-6 */
+.wrapper {
+  border: 2px solid red;
+  text-align:center ;
+  margin-bottom: 10px; 
+
+}
+
+span {
+  font-size: 15px;
+  padding-left:20px; 
+}
+
+.button {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  margin: 10px;
+}
+
+.cartWrapper {
+  border: 2px solid green;
+  width: 250px;
+  margin-left: 20%;
+}
+.cart {
+  display: flex;
+}
+
+.removeBtn {
+  background: none;
+  display: block;
+  width: 50px;
+  margin-left: auto;
+  margin-right: 20px;
+}
