task2 with pictures without changing  pictures

--- a/style.css
+++ b/style.css
@@ -50,3 +50,10 @@ span {
   margin-left: auto;
   margin-right: 20px;
 }
+
+.image {
+  width: 150px;
+  height: 150px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
